/*
 * $Id: ChangeLog,v 1.2337 2004/02/20 13:45:16 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-20 08:58 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/round.c
    % Optimized out usage of hb_itemNew() and hb_itemRelease()
    ! Fixed a memory leak.

2004-02-20 14:53 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
    ! GT window now appares in the middle of the screen in every WM.

2004-02-20 13:55 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rtl/filesys.c
   ! some \ in include changed to /

  * xharbour/source/rtl/soundex.c
   * clean C warning

  * xharbour/source/vm/errorapi.c
   * clear memory leak

  * xharbour/source/vm/itemapi.c
   * some small fixes for Clipper compatibility

2004-02-20 04:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makallvc.bat
  * makallbc.bat
    + contrib/xhwgui

2004-02-19 18:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/memvars.c
    + Added DEBUG_MEMORY_LEAK support to hb_memvarValueDecGarbageRef()

  * source/rdd/dbcmd.c
    % Various optimizations.

2004-02-20 05:35 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * Merged in some Harbour debugger updates by Ryszard Glab:
    + source/debug/dbgbrwsr.prg
      + New TDbgBrowser class which inherits from TBrowse.
    * source/debug/Makefile
    * hrbdll.bc
    * hrbdll.vc
    * makefile.bc
    * makefile.nt
    * makefile.vc
      + Added dbgbrwsr.prg.
    * source/debug/dbgmenu.prg
    * source/debug/dbgtwin.prg
    * source/debug/debugger.prg
    * source/debug/tbrwtext.prg
      + Added "Run at startup" option. If it's enabled then the program
        being debugged runs until ALTD() is called (the default option).
        If it's disabled the debugger shows up at the first code line